@@ -7,6 +7,7 @@ import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 import java.util.stream.Stream;
+
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
@@ -17,16 +18,16 @@ class WordBoggleTest {
 
     @BeforeEach
     void setup() {
-        board = new char[][] {
-            {'t', 'h', 'i', 's', 'i', 's', 'a'},
-            {'s', 'i', 'm', 'p', 'l', 'e', 'x'},
-            {'b', 'x', 'x', 'x', 'x', 'e', 'b'},
-            {'x', 'o', 'g', 'g', 'l', 'x', 'o'},
-            {'x', 'x', 'x', 'D', 'T', 'r', 'a'},
-            {'R', 'E', 'P', 'E', 'A', 'd', 'x'},
-            {'x', 'x', 'x', 'x', 'x', 'x', 'x'},
-            {'N', 'O', 'T', 'R', 'E', '_', 'P'},
-            {'x', 'x', 'D', 'E', 'T', 'A', 'E'},
+        board = new char[][]{
+                {'t', 'h', 'i', 's', 'i', 's', 'a'},
+                {'s', 'i', 'm', 'p', 'l', 'e', 'x'},
+                {'b', 'x', 'x', 'x', 'x', 'e', 'b'},
+                {'x', 'o', 'g', 'g', 'l', 'x', 'o'},
+                {'x', 'x', 'x', 'D', 'T', 'r', 'a'},
+                {'R', 'E', 'P', 'E', 'A', 'd', 'x'},
+                {'x', 'x', 'x', 'x', 'x', 'x', 'x'},
+                {'N', 'O', 'T', 'R', 'E', '_', 'P'},
+                {'x', 'x', 'D', 'E', 'T', 'A', 'E'},
         };
     }
 
@@ -39,8 +40,8 @@ class WordBoggleTest {
     }
 
     private static Stream<Arguments> provideTestCases() {
-        return Stream.of(Arguments.of(new String[] {"this", "is", "not", "a", "simple", "test", "boggle", "board", "REPEATED", "NOTRE_PEATED"}, Arrays.asList("this", "is", "a", "simple", "board", "boggle", "NOTRE_PEATED"), "All words"),
-            Arguments.of(new String[] {"xyz", "hello", "world"}, List.of(), "No matching words"), Arguments.of(new String[] {}, List.of(), "Empty words array"), Arguments.of(new String[] {"this", "this", "board", "board"}, Arrays.asList("this", "board"), "Duplicate words in input"));
+        return Stream.of(Arguments.of(new String[]{"this", "is", "not", "a", "simple", "test", "boggle", "board", "REPEATED", "NOTRE_PEATED"}, Arrays.asList("this", "is", "a", "simple", "board", "boggle", "NOTRE_PEATED"), "All words"),
+                Arguments.of(new String[]{"xyz", "hello", "world"}, List.of(), "No matching words"), Arguments.of(new String[]{}, List.of(), "Empty words array"), Arguments.of(new String[]{"this", "this", "board", "board"}, Arrays.asList("this", "board"), "Duplicate words in input"));
     }
 
     @ParameterizedTest
@@ -52,6 +53,6 @@ class WordBoggleTest {
     }
 
     private static Stream<Arguments> provideSpecialCases() {
-        return Stream.of(Arguments.of(new char[0][0], new String[] {"this", "is", "a", "test"}, List.of(), "Empty board"));
+        return Stream.of(Arguments.of(new char[0][0], new String[]{"this", "is", "a", "test"}, List.of(), "Empty board"));
     }
 }
